cleanup code a bit more